# libanonymize

./: .gitignore  .gitmodules  README.md  TODO.md
conda_env/: README.md  conda_env.yml  update_env.sh
data/: README.md  npy_to_hdf5.py
examples_cpp/compare_TD6/: CMakeLists.txt  main.cpp  run.sh
examples_cpp/compare_TD6/TD6/: Classification_TD6.hpp  ConfusionMatrix_TD6.hpp  KnnClassification_TD6.cpp  KnnClassification_TD6.hpp  RandomProjection_TD6.cpp  RandomProjection_TD6.hpp
examples_cpp/compare_TD6/data/: create_hdf5_bool.py  mail_test.hdf5  mail_train_short.csv  mail_train_short.hdf5
examples_cpp/test_knn_classifier/: CMakeLists.txt  main.cpp  run.sh
examples_cpp/test_logistic_regression/: CMakeLists.txt  main.cpp  run.sh
examples_cpp/test_multinomial_logistic_regression/: CMakeLists.txt  build.sh  main.cpp  run.sh
notebooks/: HDF5 Tests.ipynb  INF442-PI9 - Rapport CHAABOUNI OGIER.html  INF442-PI9 - Rapport CHAABOUNI OGIER.ipynb  Rapport.ipynb  TestClassification.ipynb  Vectorisation.ipynb  notebook.sh  test_classification.py
notebooks/glove_pretrained/: get.sh
pkg_info9/: CMakeLists.txt  build.sh  setup.py
pkg_info9/bindings/: wrap.cpp
pkg_info9/src/: CMakeLists.txt  helpers.cpp  helpers.h  wrap.cpp
pkg_info9/src/classification/: Classification.hpp  ConfusionMatrix.cpp  ConfusionMatrix.hpp  ConfusionMatrixMulticlass.cpp  ConfusionMatrixMulticlass.hpp  Dataset.cpp  Dataset.hpp  KnnClassification.cpp  KnnClassification.hpp  KnnClassificationBinary.cpp  KnnClassificationBinary.hpp  KnnClassificationMulticlass.cpp  KnnClassificationMulticlass.hpp  LogisticReg.cpp  LogisticReg.hpp  LogisticRegMultinomial.cpp  LogisticRegMultinomial.hpp  RandomProjection.cpp  RandomProjection.hpp
